--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "broccoli-caching-writer": "^1.0.0",
     "broccoli-kitchen-sink-helpers": "^0.2.7",
-    "esperanto": "0.7.4",
+    "esperanto": "silver-curve/esperanto",
     "mkdirp": "^0.5.0",
     "rsvp": "^3.0.16",
     "walk-sync": "^0.1.3"
